fixed menu icon alignment

--- a/client/src/components/Navbar/sideMenu.css
+++ b/client/src/components/Navbar/sideMenu.css
@@ -40,7 +40,7 @@ nav ul a{
 
     background-size: 1.25rem; 
     background-repeat: no-repeat;
-    background-position: 2rem 1.5rem;
+    background-position: 2rem 1.6rem;
 
 }
 
@@ -61,12 +61,12 @@ nav ul li{
 
 .finalList {
     background-image: url(../images/finalList.svg);
-    background-position: 2rem 1.7rem;
+    background-position: 2rem 1.9rem;
 }
 
 .archive {
     background-image: url(../images/archive.svg);
-    background-position: 2rem 1.6rem;
+    background-position: 2rem 1.9rem;
 }
 
 .settings {
@@ -95,7 +95,7 @@ nav li:hover{
     color: #00284E;
     background-size: 1.20rem; 
     background-repeat: no-repeat;
-    background-position: 3rem 1.5rem;
+    background-position: 3rem 1.6rem;
 }
 
 .dashboard:hover, a.dashboard.active  {
@@ -109,12 +109,12 @@ nav li:hover{
 
 .finalList:hover, a.finalList.active {
     background-image: url(../images/finalListDrk.svg);
-    background-position: 2rem 1.7rem;
+    background-position: 2rem 1.9rem;
 }
 
 .archive:hover, a.archive.active {
     background-image: url(../images/archiveDrk.svg);
-    background-position: 2rem 1.6rem;
+    background-position: 2rem 1.9   rem;
 }
 
 .settings:hover, a.settings.active {
@@ -136,7 +136,7 @@ a.active {
     /* font-weight: bold; */
     background-size: 1.20rem; 
     background-repeat: no-repeat;
-    background-position: 2rem 1.5rem;
+    background-position: 2rem 1.9rem;
 }
 
 .countInd {
